[tool.poetry]
name = "test-test"
version = "0.1.0"
description = ""
authors = ["Phillip Sitbon <phillip.sitbon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest-cov = "^4.0.0"
pytest = "^7.1.3"
flake8 = "^5.0.4"
mypy = "^0.982"
black = "^22.8.0"

[tool.pytest.ini_options]
minversion = "7.1"
addopts = "--import-mode=importlib --cov=app"
python_files = "test_*.py"
testpaths = ["tests",]
xfail_strict = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
